--- a/404.html
+++ b/404.html
@@ -15,6 +15,9 @@
 
     <script src="https://kit.fontawesome.com/2a9104abd7.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous"></script>
+
 
     <title>OSF Academy</title>
 </head>
@@ -112,8 +115,8 @@
                 <div class="icons-block">
                     <i class="fas fa-search nav-item"></i>
                     <i class="far fa-user nav-item"></i>
-                    <i class="far fa-heart nav-item"></i>
-                    <i class="fas fa-shopping-bag nav-item"></i>
+                    <i class="far fa-heart nav-item"><span class="count" id="cartItem">0</span></i>
+                    <i class="fas fa-shopping-bag nav-item"><span class="count" id="desiredItem">0</span></i>
                 </div>
             </nav>
     </header>
