mobile adaptiveness started

--- a/404.html
+++ b/404.html
@@ -115,8 +115,8 @@
                 <div class="icons-block">
                     <i class="fas fa-search nav-item"></i>
                     <i class="far fa-user nav-item"></i>
-                    <i class="far fa-heart nav-item"><span class="count" id="cartItem">0</span></i>
-                    <i class="fas fa-shopping-bag nav-item"><span class="count" id="desiredItem">0</span></i>
+                    <i class="far fa-heart nav-item"><span class="count" id="desiredItem">0</span></i>
+                    <i class="fas fa-shopping-bag nav-item"><span class="count" id="cartItem">0</span></i>
                 </div>
             </nav>
     </header>
@@ -146,10 +146,11 @@
             </div>
            <div class="popupOverlay"></div>
         </div>
+
         <div class="breadcrumbs">
-            <a href="./index.html">Home</a> / <span>404</span>
+            <a href="./index.html">Home</a><span class="separator"></span>/<span class="separator"></span><span>404</span>
         </div>
-        <h2 id="errPage">404</h2>
+        <h1 id="pageName">404</h1>
         <div class="main-block">
             <div class="oops"></div>
             <span>Oops!</span>
