--- a/clp.html
+++ b/clp.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" /> -->
     <link rel="stylesheet" type="text/css" href="./dist/main.css">
+    <link rel="stylesheet" type="text/css" href="./dist/404.css">
+    <link rel="stylesheet" type="text/css" href="./dist/clp.css">
+
 
 
 
@@ -41,105 +44,102 @@
 </head>
 <body>
     <header class="container" id="container">
-        <div class="menu-burger__header">
-            <span></span>
-        </div>
-        <div class="header-logo">
-            <a href="#"><img src="./images/logo.png" alt="logo"></a>
-        </div>
-        <nav class="header-nav">
-            <div class="nav-item dropdown">
-                <div class="dropbtn">
-                    SERVICES
-                    <span class="separator"></span>
-                    <i class="fas fa-sort-down arrow"></i>
-                </div>
-                <div class="dropdown-content">
-                    <div class="dropdown-container">
-                        <strong>SALE</strong>
-                        <a href="id=a1">Accessories</a>
-                        <a href="id=a2">Alcohol</a>
-                        <a href="id=a3">Art</a>
-                        <a href="id=a4">Books</a>
-                        <a href="id=a5">Drink</a>
-                        <a href="id=a6">Electronics</a>
-                        <a href="id=a7">Flowers & Plants</a>
-                        <a href="id=a8">Food</a>
-                    </div>
-                    <div class="dropdown-container">
-                        <span>&#8195;</span>
-                        <a href="id=b1">Gadgets</a>
-                        <a href="id=b2">Garden</a>
-                        <a href="id=b3">Grocery</a>
-                        <a href="id=b4">Home</a>
-                        <a href="id=b5">Jewelry</a>
-                        <a href="id=b6">Kids & Baby</a>
-                        <a href="id=b7">Men's Fashion</a>
-                        <a href="id=b8">Mobile</a>
-                    </div>
-                    <div class="dropdown-container">
-                        <span>&#8195;</span>
-                        <a href="id=c1">Motorcycles</a>
-                        <a href="id=c2">Movies</a>
-                        <a href="id=c3">Music</a>
-                        <a href="id=c4">Office</a>
-                        <a href="id=c5">Pets</a>
-                        <a href="id=c6">Romantic</a>
-                        <a href="id=c7">Sport</a>
-                        <a href="id=c8">Toys</a>
-                    </div>
-                    <div class="dropdown-container">
-                        <strong>PRODUCT CATEGORIES</strong>
-                        <a href="id=a1">Accessories</a>
-                        <a href="id=a2">Alcohol</a>
-                        <a href="id=a3">Art</a>
-                        <a href="id=a4">Books</a>
-                        <a href="id=a5">Drink</a>
-                        <a href="id=a6">Electronics</a>
-                        <a href="id=a7">Flowers & Plants</a>
-                        <a href="id=a8">Food</a>
-                    </div>
-                    <div class="drowdown-img">
-                        <img src="./images/girl with sunglasses.png" alt="girl with sunglasses">
-                    </div>
-                </div>
+            <div class="header-logo">
+                <a href="#"><img src="./images/logo.png" alt="logo"></a>
             </div>
-            <a href="id=e1" class="nav-item">COMPANY</a>
-            <a href="id=e5" class="nav-item">LIBRARY</a>
-            <a href="id=e4" class="nav-item">CONTACT US</a>
-            <div class="nav-item dropdown-small">
-                <div class="dropbtn-small">
-                    EN
-                    <span class="separator"></span>
-                    <i class="fas fa-sort-down arrow"></i>
-                </div>
-                <div class="dropdown-content-small">
-                    <div class="dropdown-container-small">
-                        <a href="id=es">ES</a>
-                        <a href="id=de">DE</a>
-                        <a href="id=pt">PT</a>
+            <nav class="header-nav">
+                <div class="nav-item dropdown">
+                    <div class="dropbtn">
+                        SERVICES
+                        <span class="separator"></span>
+                        <i class="fas fa-sort-down arrow"></i>
+                    </div>
+                    <div class="dropdown-content">
+                        <div class="dropdown-container">
+                            <strong>SALE</strong>
+                            <a href="id=a1">Accessories</a>
+                            <a href="id=a2">Alcohol</a>
+                            <a href="id=a3">Art</a>
+                            <a href="id=a4">Books</a>
+                            <a href="id=a5">Drink</a>
+                            <a href="id=a6">Electronics</a>
+                            <a href="id=a7">Flowers & Plants</a>
+                            <a href="id=a8">Food</a>
+                        </div>
+                        <div class="dropdown-container">
+                            <span>&#8195;</span>
+                            <a href="id=b1">Gadgets</a>
+                            <a href="id=b2">Garden</a>
+                            <a href="id=b3">Grocery</a>
+                            <a href="id=b4">Home</a>
+                            <a href="id=b5">Jewelry</a>
+                            <a href="id=b6">Kids & Baby</a>
+                            <a href="id=b7">Men's Fashion</a>
+                            <a href="id=b8">Mobile</a>
+                        </div>
+                        <div class="dropdown-container">
+                            <span>&#8195;</span>
+                            <a href="id=c1">Motorcycles</a>
+                            <a href="id=c2">Movies</a>
+                            <a href="id=c3">Music</a>
+                            <a href="id=c4">Office</a>
+                            <a href="id=c5">Pets</a>
+                            <a href="id=c6">Romantic</a>
+                            <a href="id=c7">Sport</a>
+                            <a href="id=c8">Toys</a>
+                        </div>
+                        <div class="dropdown-container">
+                            <strong>PRODUCT CATEGORIES</strong>
+                            <a href="id=a1">Accessories</a>
+                            <a href="id=a2">Alcohol</a>
+                            <a href="id=a3">Art</a>
+                            <a href="id=a4">Books</a>
+                            <a href="id=a5">Drink</a>
+                            <a href="id=a6">Electronics</a>
+                            <a href="id=a7">Flowers & Plants</a>
+                            <a href="id=a8">Food</a>
+                        </div>
+                        <div class="drowdown-img">
+                            <img src="./images/girl with sunglasses.png" alt="girl with sunglasses">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="nav-item dropdown-small">
-                <div class="dropbtn-small">
-                    &#36; US
-                    <span class="separator"></span>
-                    <i class="fas fa-sort-down arrow"></i>
-                </div>
-                <div class="dropdown-content-small">
-                    <div class="dropdown-container-small">
-                        <a href="id=eu">&#8364; EU</a>
+                <a href="id=e1" class="nav-item">COMPANY</a>
+                <a href="id=e5" class="nav-item">LIBRARY</a>
+                <a href="id=e4" class="nav-item">CONTACT US</a>
+                <div class="nav-item dropdown-small">
+                    <div class="dropbtn-small">
+                        EN
+                        <span class="separator"></span>
+                        <i class="fas fa-sort-down arrow"></i>
+                    </div>
+                    <div class="dropdown-content-small">
+                        <div class="dropdown-container-small">
+                            <a href="id=es">ES</a>
+                            <a href="id=de">DE</a>
+                            <a href="id=pt">PT</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="icons-block">
-                <i class="fas fa-search nav-item"></i>
-                <i class="far fa-user nav-item"></i>
-                <i class="far fa-heart nav-item"><span class="count" id="desiredItem">0</span></i>
-                <i class="fas fa-shopping-bag nav-item"><span class="count" id="cartItem">0</span></i>
-            </div>
-        </nav>
+                <div class="nav-item dropdown-small">
+                    <div class="dropbtn-small">
+                        &#36; US
+                        <span class="separator"></span>
+                        <i class="fas fa-sort-down arrow"></i>
+                    </div>
+                    <div class="dropdown-content-small">
+                        <div class="dropdown-container-small">
+                            <a href="id=eu">&#8364; EU</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="icons-block">
+                    <i class="fas fa-search nav-item"></i>
+                    <i class="far fa-user nav-item"></i>
+                    <i class="far fa-heart nav-item"><span class="count" id="desiredItem">0</span></i>
+                    <i class="fas fa-shopping-bag nav-item"><span class="count" id="cartItem">0</span></i>
+                </div>
+            </nav>
     </header>
     <main>
         <div class="modal-wrapper">
@@ -168,57 +168,90 @@
            <div class="popupOverlay"></div>
         </div>
 
-        <div class="cookieOverlay">
-            <div class="cookieBody">
-                <h3>This website uses cookies</h3>
-                <p>OSF uses its own and third-party cookies for statistical purposes, to know your preferences, for website performance and interaction with social media offering publicity tailored to your interests. If you continue browsing, we consider that you accept its use.
-                    You can expand this information consulting our <a>Cookies Policy Page.</a>
-                </p>
-                <a href="javascript:;" class="close"><i class="fas fa-times"></i></a>
-                <a href="javascript:;" class="submit">ACCEPT</a>
-            </div>
+        <div class="breadcrumbs">
+            <a href="./index.html">Home</a>
+            <span class="separator"></span>/<span class="separator"></span>
+            <span>Category Landing Services</span>
         </div>
+        <h1 id="pageName">Services</h1>
 
-        <div class="slider-block">
-            <div class="slider-left" id="slider">
-                <h1>Control and manage any<br> device with cloud solutions</h1>
-                <p>Improve business perfomance and user experience<br> with the right mix of IoT technology and processes</p>
-                <button id="viewMore">VIEW MORE</button>
-                <div class="pagination-wrapper">
-                    <div class="pagination">
-                      <span class="active" id="pagDef"></span>
-                      <span id="pagCentr"></span>
-                      <span id="pagRght"></span>
+        <div class="filters">
+            <div class="filter">
+                <span>Price</span>
+                <select name="price" id="price">
+                    <option value="from0to200" selected>&#36; 0.00 – &#36; 200.00</option>
+                    <option value="from200to400">&#36; 200.00 – &#36; 400.00</option>
+                    <option value="from400to600">&#36; 400.00 – &#36; 600.00</option>
+                    <option value="from600to800">&#36; 600.00 – &#36; 800.00</option>
+                </select>
+            </div>
+            <div class="filter">
+                <span>Brands</span>
+                <select name="brands" id="brands">
+                    <option value="ukraine-sport" selected>Ukraine sport</option>
+                    <option value="hay">Hay</option>
+                    <option value="kristina-dam">Kristina Dam</option>
+                    <option value="yes">YES</option>
+                    <option value="logitech">Logitech</option>
+                    <option value="tink">TINK</option>
+                    <option value="zanzea">ZANZEA</option>
+                </select>
+            </div>
+            <div class="filter">
+                <span>Size</span>
+                <select name="size" id="size">
+                    <option value="small" selected>Small</option>
+                    <option value="medium">Medium</option>
+                    <option value="big">Big</option>
+                </select>
+            </div>
+            <div class="filter" id="colorDiv">
+                <span>Color</span>
+                <div class="color-picker">
+                    <div class="color-pagination">
+                        <span class="picked" id="white"></span>
+                        <span id="blue"></span>
+                        <span id="black"></span>
+                        <span id="green"></span>
+                        <span id="darkblue"></span>
+                        <span id="orange"></span>
+                        <span id="red"></span>
+                        <span id="beige"></span>
                     </div>
                 </div>
             </div>
-            <div class="slider-right">
-                <div class="sales-block">
-                    <span>55%</span>
-                    <div>Summer<br>sales</div>
-                </div>
-                <div>
-                    <h3>Follow us on Facebook</h3>
-                    <p>Sed ut perspiciatis unde omnis iste<br> natus error sit</p>
-                </div>
-                <button id="fb"><i class="fab fa-facebook-f"><span class="separator"></span></i><span>FOLLOW</span></span></button>
+            <div class="filter">
+                <span>Sort by</span>
+                <select name="sortBy" id="sortBy">
+                    <option value="price" selected>Price</option>
+                    <option value="brands">Brands</option>
+                    <option value="size">Size</option>
+                    <option value="color">Color</option>
+                </select>
+            </div>
+            <div class="filter">
+                <span>Show</span>
+                <select name="show" id="show">
+                    <option value="4-per-page">4 per page</option>
+                    <option value="8-per-page">8 per page</option>
+                    <option value="12-per-page">12 per page</option>
+                    <option value="16-per-page" selected>16 per page</option>
+                </select>
             </div>
         </div>
+
         <div class="products-block">
-            <h3>Popular Items</h3>
+            <span>12,931 result in apparel</span>
             <div class="items" id="productTmpl">
                 <div class="item">
                     <div class="img" id="item-1"></div>
                     <h4>Kristina Dam Oak Table With White Marble Top</h4>
                     <span>&#36; 799.55</span>
                 </div>
-                <div id="specificItem">
+                <div class="item" id="specificItem">
                     <div class="img" id="item-2" href="#"></div>
                     <h4>Hay - About A lounge Chair AAL 93</h4>
-                    <div id="button">
-                        <span>&#36; 659.55</span>
-                        <span class="addToCart">BUY NOW</span>
-                    </div>
+                    <span>&#36; 659.55</span>
                 </div>
                 <div class="item">
                     <div class="img" id="item-3"></div>
@@ -245,20 +278,13 @@
                     <h4>CH445 Wing Chair on SUITE NY</h4>
                     <span>&#36; 330.55</span>
                 </div>
-                <div class="static-item">
-                    <div>
-                        <p>My dragons are misbehaving again. Unbelieveable!</p>
-                        <p><img src="./images/user.png" alt="">5H AGO</p>
-                    </div>
+                <div class="item">
+                    <div class="img" id="item-3"></div>
+                    <h4>Activate Facial Mask and Charcoal Soap</h4>
+                    <span>&#36; 129.55</span>
                 </div>
             </div>
-            <button id="loadMore"><span>LOAD MORE</span><span class="separator"></span><i class="fas fa-undo-alt"></i></button>
-            <button id="loadMore2" style="display: none;"><span>LOAD MORE</span><span class="separator"></span><i class="fas fa-undo-alt"></i></button>
-        </div>
-
-        <div class="banner">
-            <h2>Banner OSF Theme</h2>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit volup-<br>tatem accusantium</p>
+            <button class="btnGreen">LOAD MORE</button>
         </div>
 
         <div class="latest-posts">
@@ -333,29 +359,6 @@
             </div>
         </div>
 
-        <div class="services">
-            <div class="service-block">
-                <img src="./images/Delivery Packages On A Trolley. Attribute as Freepik from Flaticon.com.png" alt="Delivery Packages On A Trolley">
-                <div>
-                    <h3>FOCUS</h3>
-                    <p>Our unwavering focus on superior service delivery and building next generation competencies</p>
-                </div>
-            </div>
-            <div class="service-block">
-                <img src="./images/Triangular Arrows Sign For Recycle. Attribute as Freepik from Flaticon.com.png" alt="Triangular Arrows Sign For Recycle">
-                <div>
-                    <h3>METHOD</h3>
-                    <p>A standarlized methodology designed to deliver measurable business results and predictable costs</p>
-                </div>
-            </div>
-            <div class="service-block">
-                <img src="./images/Clipboard Verification Symbol. Attribute as Freepik from Flaticon.com.png" alt="Clipboard Verification Symbol">
-                <div>
-                    <h3>KNOWLEDGE</h3>
-                    <p>A highly skilled, proactive workforce that reliable improves each client's ROI while mitigating their business risk</p>
-                </div>
-            </div>
-        </div>
     </main>
     <footer>
         <div class="copyright">
@@ -411,5 +414,6 @@
     </footer>
 
     <script src="./script/script.js" type="text/javascript"></script>
+    <script src="./script/clp.js" type="text/javascript"></script>
 </body>
 </html>
