--- a/404.html
+++ b/404.html
@@ -6,119 +6,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="HandheldFriendly" content="true">
 
-    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./dist/main.css">
-    <link rel="stylesheet" href="./dist/404.css">
+    <link rel="stylesheet" type="text/css" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+    <link rel="preconnect" type="text/css" href="https://fonts.gstatic.com"> 
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Lato&display=swap">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="./dist/main.css">
+    <link rel="stylesheet" type="text/css" href="./dist/404.css">
 
 
-    <script src="https://kit.fontawesome.com/2a9104abd7.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/2a9104abd7.js" crossorigin="anonymous" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.3.2/jquery-migrate.min.js" integrity="sha512-3fMsI1vtU2e/tVxZORSEeuMhXnT9By80xlmXlsOku7hNwZSHJjwcOBpmy+uu+fyWwGCLkMvdVbHkeoXdAzBv+w==" crossorigin="anonymous"></script>
+    <script src="https://kenwheeler.github.io/slick/slick/slick.js" type="text/javascript"></script>
+
+
 
 
     <title>OSF Academy</title>
 </head>
 <body>
-    <header class="container">
-            <div class="header-logo">
-                <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
+    <header class="container" id="container">
+        <div class="menu-burger__header">
+            <span></span>
+        </div>
+        <div class="header-logo">
+            <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
+        </div>
+        <nav class="header-nav">
+            <div class="nav-item dropdown">
+                <div class="dropbtn">
+                    SERVICES
+                    <span class="separator"></span>
+                    <i class="fas fa-sort-down arrow"></i>
+                </div>
+                <div class="dropdown-content">
+                    <div class="dropdown-container">
+                        <strong>SALE</strong>
+                        <a href="id=a1">Accessories</a>
+                        <a href="id=a2">Alcohol</a>
+                        <a href="id=a3">Art</a>
+                        <a href="id=a4">Books</a>
+                        <a href="id=a5">Drink</a>
+                        <a href="id=a6">Electronics</a>
+                        <a href="id=a7">Flowers & Plants</a>
+                        <a href="id=a8">Food</a>
+                    </div>
+                    <div class="dropdown-container">
+                        <span>&#8195;</span>
+                        <a href="id=b1">Gadgets</a>
+                        <a href="id=b2">Garden</a>
+                        <a href="id=b3">Grocery</a>
+                        <a href="id=b4">Home</a>
+                        <a href="id=b5">Jewelry</a>
+                        <a href="id=b6">Kids & Baby</a>
+                        <a href="id=b7">Men's Fashion</a>
+                        <a href="id=b8">Mobile</a>
+                    </div>
+                    <div class="dropdown-container">
+                        <span>&#8195;</span>
+                        <a href="id=c1">Motorcycles</a>
+                        <a href="id=c2">Movies</a>
+                        <a href="id=c3">Music</a>
+                        <a href="id=c4">Office</a>
+                        <a href="id=c5">Pets</a>
+                        <a href="id=c6">Romantic</a>
+                        <a href="id=c7">Sport</a>
+                        <a href="id=c8">Toys</a>
+                    </div>
+                    <div class="dropdown-container">
+                        <strong>PRODUCT CATEGORIES</strong>
+                        <a href="id=a1">Accessories</a>
+                        <a href="id=a2">Alcohol</a>
+                        <a href="id=a3">Art</a>
+                        <a href="id=a4">Books</a>
+                        <a href="id=a5">Drink</a>
+                        <a href="id=a6">Electronics</a>
+                        <a href="id=a7">Flowers & Plants</a>
+                        <a href="id=a8">Food</a>
+                    </div>
+                    <div class="drowdown-img">
+                        <img src="./images/girl with sunglasses.png" alt="girl with sunglasses">
+                    </div>
+                </div>
             </div>
-            <nav class="header-nav">
-                <div class="nav-item dropdown">
-                    <div class="dropbtn">
-                        SERVICES
-                        <span class="separator"></span>
-                        <i class="fas fa-sort-down arrow"></i>
-                    </div>
-                    <div class="dropdown-content">
-                        <div class="dropdown-container">
-                            <strong>SALE</strong>
-                            <a href="id=a1">Accessories</a>
-                            <a href="id=a2">Alcohol</a>
-                            <a href="id=a3">Art</a>
-                            <a href="id=a4">Books</a>
-                            <a href="id=a5">Drink</a>
-                            <a href="id=a6">Electronics</a>
-                            <a href="id=a7">Flowers & Plants</a>
-                            <a href="id=a8">Food</a>
-                        </div>
-                        <div class="dropdown-container">
-                            <span>&#8195;</span>
-                            <a href="id=b1">Gadgets</a>
-                            <a href="id=b2">Garden</a>
-                            <a href="id=b3">Grocery</a>
-                            <a href="id=b4">Home</a>
-                            <a href="id=b5">Jewelry</a>
-                            <a href="id=b6">Kids & Baby</a>
-                            <a href="id=b7">Men's Fashion</a>
-                            <a href="id=b8">Mobile</a>
-                        </div>
-                        <div class="dropdown-container">
-                            <span>&#8195;</span>
-                            <a href="id=c1">Motorcycles</a>
-                            <a href="id=c2">Movies</a>
-                            <a href="id=c3">Music</a>
-                            <a href="id=c4">Office</a>
-                            <a href="id=c5">Pets</a>
-                            <a href="id=c6">Romantic</a>
-                            <a href="id=c7">Sport</a>
-                            <a href="id=c8">Toys</a>
-                        </div>
-                        <div class="dropdown-container">
-                            <strong>PRODUCT CATEGORIES</strong>
-                            <a href="id=a1">Accessories</a>
-                            <a href="id=a2">Alcohol</a>
-                            <a href="id=a3">Art</a>
-                            <a href="id=a4">Books</a>
-                            <a href="id=a5">Drink</a>
-                            <a href="id=a6">Electronics</a>
-                            <a href="id=a7">Flowers & Plants</a>
-                            <a href="id=a8">Food</a>
-                        </div>
-                        <div class="drowdown-img">
-                            <img src="./images/girl with sunglasses.png" alt="girl with sunglasses">
-                        </div>
+            <a href="id=e1" class="nav-item">COMPANY</a>
+            <a href="id=e5" class="nav-item">LIBRARY</a>
+            <a href="id=e4" class="nav-item">CONTACT US</a>
+            <div class="nav-item dropdown-small">
+                <div class="dropbtn-small">
+                    EN
+                    <span class="separator"></span>
+                    <i class="fas fa-sort-down arrow"></i>
+                </div>
+                <div class="dropdown-content-small">
+                    <div class="dropdown-container-small">
+                        <a href="id=es">ES</a>
+                        <a href="id=de">DE</a>
+                        <a href="id=pt">PT</a>
                     </div>
                 </div>
-                <a href="id=e1" class="nav-item">COMPANY</a>
-                <a href="id=e5" class="nav-item">LIBRARY</a>
-                <a href="id=e4" class="nav-item">CONTACT US</a>
-                <div class="nav-item dropdown-small">
-                    <div class="dropbtn-small">
-                        EN
-                        <span class="separator"></span>
-                        <i class="fas fa-sort-down arrow"></i>
-                    </div>
-                    <div class="dropdown-content-small">
-                        <div class="dropdown-container-small">
-                            <a href="id=es">ES</a>
-                            <a href="id=de">DE</a>
-                            <a href="id=pt">PT</a>
-                        </div>
+            </div>
+            <div class="nav-item dropdown-small">
+                <div class="dropbtn-small">
+                    &#36; US
+                    <span class="separator"></span>
+                    <i class="fas fa-sort-down arrow"></i>
+                </div>
+                <div class="dropdown-content-small">
+                    <div class="dropdown-container-small">
+                        <a href="id=eu">&#8364; EU</a>
                     </div>
                 </div>
-                <div class="nav-item dropdown-small">
-                    <div class="dropbtn-small">
-                        &#36; US
-                        <span class="separator"></span>
-                        <i class="fas fa-sort-down arrow"></i>
-                    </div>
-                    <div class="dropdown-content-small">
-                        <div class="dropdown-container-small">
-                            <a href="id=eu">&#8364; EU</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="icons-block">
-                    <i class="fas fa-search nav-item"></i>
-                    <i class="far fa-user nav-item"></i>
-                    <i class="far fa-heart nav-item"><span class="count" id="desiredItem">0</span></i>
-                    <i class="fas fa-shopping-bag nav-item"><span class="count" id="cartItem">0</span></i>
-                </div>
-            </nav>
+            </div>
+            <div class="icons-block">
+                <i class="fas fa-search nav-item"></i>
+                <i class="far fa-user nav-item"></i>
+                <i class="far fa-heart nav-item"><span class="count" id="desiredItem">0</span></i>
+                <i class="fas fa-shopping-bag nav-item"><span class="count" id="cartItem">0</span></i>
+            </div>
+        </nav>
     </header>
     <main>
         <div class="modal-wrapper">
@@ -221,5 +229,6 @@
     </footer>
 
     <script src="./script/script.js"></script>
+    <script src="./script/scriptMobileVersion.js" type="text/javascript"></script>
 </body>
 </html>
