--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" type="text/css" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
     <link rel="preconnect" type="text/css" href="https://fonts.gstatic.com"> 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Lato&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" />
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" /> -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="./dist/main.css">
 
 
@@ -21,6 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.3.2/jquery-migrate.min.js" integrity="sha512-3fMsI1vtU2e/tVxZORSEeuMhXnT9By80xlmXlsOku7hNwZSHJjwcOBpmy+uu+fyWwGCLkMvdVbHkeoXdAzBv+w==" crossorigin="anonymous"></script>
     <script src="https://kenwheeler.github.io/slick/slick/slick.js" type="text/javascript"></script>
+    
 
     <script id="productsTemplate" type='text/x-jquery-tmpl'>
         <div class="item">
@@ -56,7 +56,7 @@
                 </div>
                 <div class="dropdown-content">
                     <div class="dropdown-container">
-                        <strong>SALE</strong>
+                        <strong id="sale">SALE</strong>
                         <a href="id=a1">Accessories</a>
                         <a href="id=a2">Alcohol</a>
                         <a href="id=a3">Art</a>
@@ -89,7 +89,7 @@
                         <a href="id=c8">Toys</a>
                     </div>
                     <div class="dropdown-container">
-                        <strong>PRODUCT CATEGORIES</strong>
+                        <strong id="productCategories">PRODUCT CATEGORIES</strong>
                         <a href="id=a1">Accessories</a>
                         <a href="id=a2">Alcohol</a>
                         <a href="id=a3">Art</a>
@@ -172,7 +172,7 @@
             <div class="cookieBody">
                 <h3>This website uses cookies</h3>
                 <p>OSF uses its own and third-party cookies for statistical purposes, to know your preferences, for website performance and interaction with social media offering publicity tailored to your interests. If you continue browsing, we consider that you accept its use.
-                    You can expand this information consulting our <a>Cookies Policy Page.</a>
+                    You can expand this information consulting our <a href="id=cp">Cookies Policy Page.</a>
                 </p>
                 <a href="javascript:;" class="close"><i class="fas fa-times"></i></a>
                 <a href="javascript:;" class="submit">ACCEPT</a>
@@ -411,5 +411,6 @@
     </footer>
 
     <script src="./script/script.js" type="text/javascript"></script>
+    <script src="./script/scriptMobileVersion.js" type="text/javascript"></script>
 </body>
 </html>
