--- a/404.html
+++ b/404.html
@@ -227,6 +227,12 @@
             <a href="https://www.pinterest.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-pinterest-p"></i></a>
         </div>
     </footer>
+    <div class="icons-block" id="mob-nav" style="display: none;">
+        <i class="fas fa-search nav-item"></i>
+        <i class="far fa-user nav-item"></i>
+        <i class="far fa-heart nav-item"><span class="count" id="desiredItem">0</span></i>
+        <i class="fas fa-shopping-bag nav-item"><span class="count" id="cartItem">0</span></i>
+    </div>
 
     <script src="./script/script.js"></script>
     <script src="./script/scriptMobileVersion.js" type="text/javascript"></script>
