--- a/pdp.html
+++ b/pdp.html
@@ -173,7 +173,7 @@
            <div class="popupOverlay"></div>
         </div>
 
-        <div class="breadcrumbs">
+        <div class="breadcrumbs" id="breadcrumbs">
             <a href="./index.html">Home</a>
             <span class="separator"></span>/<span class="separator"></span>
             <a href="./clp.html">OSF Theme</a>
@@ -284,7 +284,7 @@
                     <span>Awesome</span>
                 </div>
             </div>
-            <a href="#container"><button class="btnGreen">SCROLL TO TOP</button></a>
+            <a href="#breadcrumbs"><button class="btnGreen">SCROLL TO TOP</button></a>
         </div>
         <div class="products-block">
             <h3>Popular Items</h3>
@@ -388,6 +388,12 @@
             <a href="https://www.pinterest.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-pinterest-p"></i></a>
         </div>
     </footer>
+    <div class="icons-block" id="mob-nav" style="display: none;">
+        <i class="fas fa-search nav-item"></i>
+        <i class="far fa-user nav-item"></i>
+        <i class="far fa-heart nav-item"><span class="count" id="desiredItem">0</span></i>
+        <i class="fas fa-shopping-bag nav-item"><span class="count" id="cartItem">0</span></i>
+    </div>
 
     <script src="./script/script.js" type="text/javascript"></script>
     <script src="./script/pdp.js" type="text/javascript"></script>
