--- a/404.html
+++ b/404.html
@@ -156,7 +156,9 @@
         </div>
 
         <div class="breadcrumbs">
-            <a href="./index.html">Home</a><span class="separator"></span>/<span class="separator"></span><span>404</span>
+            <a href="./index.html">Home</a>
+            <span class="separator"></span>/<span class="separator"></span>
+            <span>404</span>
         </div>
         <h1 id="pageName">404</h1>
         <div class="main-block">
@@ -187,7 +189,7 @@
         </div>
         <div class="sitemap">
             <div>
-                <span>CATEGORIES</span>
+                <span id="footerAbout">CATEGORIES</span>
                 <a href="id=a2">Alcohol</a>
                 <a href="id=a3">Art</a>
                 <a href="id=a4">Books</a>
@@ -213,7 +215,7 @@
                 <a href="id=d2">Women's Fashion</a>
             </div>
             <div>
-                <span>ABOUT</span>
+                <span id="footerAbout">ABOUT</span>
                 <a href="id=e1">About us</a>
                 <a href="id=e2">Delivery</a>
                 <a href="id=e3">Testimonials</a>
@@ -230,8 +232,8 @@
     <div class="icons-block" id="mob-nav" style="display: none;">
         <i class="fas fa-search nav-item"></i>
         <i class="far fa-user nav-item"></i>
-        <i class="far fa-heart nav-item"><span class="count" id="desiredItem">0</span></i>
-        <i class="fas fa-shopping-bag nav-item"><span class="count" id="cartItem">0</span></i>
+        <i class="far fa-heart nav-item"><span class="count desiredItem">0</span></i>
+        <i class="fas fa-shopping-bag nav-item"><span class="count cartItem" id="cartItem">0</span></i>
     </div>
 
     <script src="./script/script.js"></script>
