--- a/clp.html
+++ b/clp.html
@@ -46,7 +46,7 @@
             <span></span>
         </div>
         <div class="header-logo">
-            <a href="#"><img src="./images/logo.png" alt="logo"></a>
+            <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
         </div>
         <nav class="header-nav">
             <div class="nav-item dropdown">
@@ -373,7 +373,7 @@
         </div>
         <div class="sitemap">
             <div>
-                <span>CATEGORIES</span>
+                <span id="footerCategories">CATEGORIES</span>
                 <a href="id=a2">Alcohol</a>
                 <a href="id=a3">Art</a>
                 <a href="id=a4">Books</a>
@@ -399,7 +399,7 @@
                 <a href="id=d2">Women's Fashion</a>
             </div>
             <div>
-                <span>ABOUT</span>
+                <span id="footerAbout">ABOUT</span>
                 <a href="id=e1">About us</a>
                 <a href="id=e2">Delivery</a>
                 <a href="id=e3">Testimonials</a>
@@ -416,8 +416,8 @@
     <div class="icons-block" id="mob-nav" style="display: none;">
         <i class="fas fa-search nav-item"></i>
         <i class="far fa-user nav-item"></i>
-        <i class="far fa-heart nav-item"><span class="count" id="desiredItem">0</span></i>
-        <i class="fas fa-shopping-bag nav-item"><span class="count" id="cartItem">0</span></i>
+        <i class="far fa-heart nav-item"><span class="count desiredItem" id="desiredItem">0</span></i>
+        <i class="fas fa-shopping-bag nav-item"><span class="count cartItem" id="cartItem">0</span></i>
     </div>
 
     <script src="./script/script.js" type="text/javascript"></script>
