--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://kit.fontawesome.com/2a9104abd7.js" crossorigin="anonymous" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.1/jquery.mobile.min.js" integrity="sha512-wSacGPS/KRyVB67O4xD+Eh1OX4/dq4juZj9DKTokRt81BzLbfsSMtNgR9Pu8FLr4kLbk5oNr9Hq+5PeWLCX8mA==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.3.2/jquery-migrate.min.js" integrity="sha512-3fMsI1vtU2e/tVxZORSEeuMhXnT9By80xlmXlsOku7hNwZSHJjwcOBpmy+uu+fyWwGCLkMvdVbHkeoXdAzBv+w==" crossorigin="anonymous"></script>
     <script src="https://kenwheeler.github.io/slick/slick/slick.js" type="text/javascript"></script>
@@ -46,7 +47,7 @@
             <span></span>
         </div>
         <div class="header-logo">
-            <a href="#"><img src="./images/logo.png" alt="logo"></a>
+            <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
         </div>
         <nav class="header-nav">
             <div class="nav-item dropdown">
@@ -214,7 +215,7 @@
                     <span>&#36; 799.55</span>
                 </div>
                 <div id="specificItem">
-                    <div class="img" id="item-2" href="#"></div>
+                    <div class="img" id="item-2"></div>
                     <h4>Hay - About A lounge Chair AAL 93</h4>
                     <div id="button">
                         <span>&#36; 659.55</span>
@@ -413,8 +414,8 @@
     <div class="icons-block" id="mob-nav" style="display: none;">
         <i class="fas fa-search nav-item"></i>
         <i class="far fa-user nav-item"></i>
-        <i class="far fa-heart nav-item"><span class="count" id="desiredItem">0</span></i>
-        <i class="fas fa-shopping-bag nav-item"><span class="count" id="cartItem">0</span></i>
+        <i class="far fa-heart nav-item"><span class="count desiredItem" id="desiredItem">0</span></i>
+        <i class="fas fa-shopping-bag nav-item"><span class="count cartItem" id="cartItem">0</span></i>
     </div>
 
     <script src="./script/script.js" type="text/javascript"></script>
